<resources>
    <string name="app_name">Goal Academy</string>
    <!-- Category name for track tab [CHAR LIMIT=20] -->
    <string name="category_track">Track</string>
    <string name="fallback_week_number">Week #</string>
    <string name="fallback_trackname">Goal X</string>
    <string name="monday_short">Mon</string>
    <string name="tuesday_short">Tue</string>
    <string name="wednesday_short">Wed</string>
    <string name="thursday_short">Thu</string>
    <string name="friday_short">Fri</string>
    <string name="saturday_short">Sat</string>
    <string name="sunday_short">Sun</string>
    <string name="fallback_motivation">Keep it up!</string>
    <!-- This is the test ad id!!!  -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="fallback_streak_number">250</string>
    <string name="fallback_finished_percent">10%</string>
    <string name="fallback_next_level">Bronze</string>
    <string name="streak">Streak</string>
    <string name="completion">Stage done</string>
    <string name="next_level">Next Level</string>
    <string name="goal">Goal</string>
    <string name="award">Award</string>
    <string name="date">Date</string>
    <string name="share">Share</string>
    <string name="category_goals">Goals</string>
    <string name="category_trophies">Trophies</string>
    <string name="goal_name">Goal Name</string>
    <string name="select_weekdays">I will do it on these days:</string>
    <string name="or">or</string>
    <string name="times_a_week">times a week.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="error_no_goal_name">Please enter a goal name</string>
    <string name="error_no_time_chosen">Please select a time when to do it</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_collection_widget">Goal Academy</string>
    <string name="sample_admob_app_ID_for_activity">ca-app-pub-3940256099942544~3347511713</string>
    <string name="default_message">Something happened.</string>
    <string name="fail_message">Alas! You failed to progress any further. Your achieved level is:</string>
    <string name="fail_title">Fail.</string>
    <string name="sign_out">Sign out</string>
    <string name="share_text">I just finished a goal in Goal Academy! My achievement is:</string>
    <string name="action_share">Share</string>
    <string name="description_add_new_goal">Tap here to add a new goal.</string>
    <string name="description_week_decrease">Tap this button to show the progress one week earlier.</string>
    <string name="description_week_increase">Tap this button to show the progress one week later.</string>
    <string name="description_current_week">This button displays the shown week number. Tap it switch to the current week.</string>
    <string name="description_share_button">Tap this button to share your goal.</string>
    <string name="description_trophy_image">This image shows the type of trophy you have been awarded. It can be Bronze, Silver or Gold.</string>
    <string name="description_three_states_button_neutral">Status: Neutral. This button can be neutral, pass or fail. Tap to switch the state.</string>
    <string name="description_three_states_button_fail">Status: Fail. This button can be neutral, pass or fail. Tap to switch the state.</string>
    <string name="description_three_states_button_pass">Status: Pass. This button can be neutral, pass or fail. Tap to switch the state.</string>
    <string name="fallback_info">Urgent!</string>
    <string name="fallback_no_data_widget">No events today.</string>
    <string name="widget_outdated_text">Widget data needs to be refreshed. Tap to launch GoalAcademy!</string>
    <string name="LOADED_FROM_CONTENT_RESOLVER">LOADED FROM CONTENT RESOLVER%s</string>
    <string name="ERROR_PROCESSING_CURSOR">Error while processing Cursor to Quote. %s</string>
    <string name="BROADCAST_RECEIVED">BROADCAST received. %s</string>
    <string name="FIREBASE_ERROR_MESSAGE">Firebase DB error. Message: %s</string>
    <string name="FIREBASE_ERROR_DETAILS">Firebase DB error. Message: %s</string>
    <string name="NEW_GOAL_TEXT">New goal</string>
    <string name="FRAGMENT_EDIT_NAME">fragment_edit_name</string>
    <string name="GOLD_EARNED_STRING">Gold</string>
    <string name="SILVER_EARNED_STRING">Silver</string>
    <string name="BRONZE_EARNED_STRING">Bronze</string>
    <string name="BEGINNER_STRING">Beginner</string>

</resources>
