<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/pad_2">

    <TextView
        android:textAlignment="viewStart"
        android:textDirection="locale"
        android:layout_gravity="start"
        android:paddingStart="@dimen/pad_0"
        android:paddingLeft="@dimen/pad_0"
        android:paddingEnd="@dimen/pad_0"
        android:paddingRight="@dimen/pad_0"
        android:id="@+id/tv_goal_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/fallback_trackname" />
   <ImageView
       android:id="@+id/iv_award"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
       android:contentDescription="@string/description_trophy_image"
       android:src="@drawable/ic_trophy_bronze"
       android:layout_weight="1"
       />
    <TextView
        android:textAlignment="viewStart"
        android:textDirection="locale"
        android:layout_gravity="start"
        android:paddingStart="@dimen/pad_0"
        android:paddingLeft="@dimen/pad_0"
        android:paddingEnd="@dimen/pad_0"
        android:paddingRight="@dimen/pad_0"
        android:id="@+id/tv_completion_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/fallback_finished_percent" />
    <ImageButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/ib_share"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/description_share_button"
        android:src="@drawable/ic_share"
        android:layout_weight="1"
        />
</TableRow>