<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1CB4B5"
    android:orientation="vertical"
    tools:context=".fragments.TrophiesFragment">

    <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/pad_2">

        <TextView
            android:paddingStart="@dimen/pad_0"
            android:paddingLeft="@dimen/pad_0"
            android:paddingEnd="@dimen/pad_0"
            android:paddingRight="@dimen/pad_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/goal" />

        <TextView
            android:paddingStart="@dimen/pad_0"
            android:paddingLeft="@dimen/pad_0"
            android:paddingEnd="@dimen/pad_0"
            android:paddingRight="@dimen/pad_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/award" />

        <TextView
            android:paddingStart="@dimen/pad_0"
            android:paddingLeft="@dimen/pad_0"
            android:paddingEnd="@dimen/pad_0"
            android:paddingRight="@dimen/pad_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date" />

        <TextView
            android:paddingStart="@dimen/pad_0"
            android:paddingLeft="@dimen/pad_0"
            android:paddingEnd="@dimen/pad_0"
            android:paddingRight="@dimen/pad_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/share" />

    </TableRow>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_trophies"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#444444"
        android:scrollbars="vertical" />
</LinearLayout>
